--- a/app/src/main/res/layout/fragment_songs.xml
+++ b/app/src/main/res/layout/fragment_songs.xml
@@ -5,6 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/back"
     android:orientation="vertical"
     android:padding="8dp"
     tools:context=".fragments.SongsFragment">
@@ -13,6 +14,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/white"
         android:clipToPadding="false"
         android:orientation="vertical"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
