--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -38,7 +38,7 @@
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:text="Billian Billia"
+                android:text="@string/song_name"
                 android:textAlignment="center"
                 android:textSize="16sp" />
 
@@ -51,7 +51,7 @@
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:text="Samsung . 3:49"
+                android:text="@string/artist_time"
                 android:textAlignment="center" />
 
         </LinearLayout>
