--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/affogato_regular"
+            android:fontFamily="@font/affogato_medium"
             android:padding="8dp"
             android:text="@string/libraries"
             android:textColor="@color/colorPrimary"
@@ -27,7 +27,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/affogato_regular"
+            android:fontFamily="@font/affogato_medium"
             android:padding="8dp"
             android:text="@string/slideup"
             android:textSize="16sp" />
@@ -35,19 +35,19 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/affogato_regular"
+            android:fontFamily="@font/affogato_medium"
             android:padding="8dp"
             android:text="@string/about_slideup"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
 
     </LinearLayout>
 
     <TextView
-        android:padding="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/affogato_medium"
         android:gravity="center"
+        android:padding="8dp"
         android:text="@string/byme"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent" />
